<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".Auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_login"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/colorPrimary"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidthFocused="3dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidthFocused="3dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="LOGIN"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:src="@drawable/line"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="atau"
            android:textColor="@color/colorGray"
            android:layout_marginBottom="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:src="@drawable/line"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/to_main_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Masuk Tanpa Login"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/to_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal"
                android:letterSpacing="0"
                app:backgroundTint="@color/colorWhite" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal"
                android:letterSpacing="0"
                app:backgroundTint="@color/colorWhite" />

        </LinearLayout>




</LinearLayout>


</androidx.core.widget.NestedScrollView>